# Vector-Research-Agentic-RAG-

./: README.md  pyproject.toml
src/research_agent_crew/: crew.py  main.py
src/research_agent_crew/config/: agents.yaml  tasks.yaml
src/research_agent_crew/tools/: research_tool.py
